# Modules/Notification/app/Http/Requests/NotificationListRequest.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace Modules\Notification\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class NotificationListRequest extends FormRequest
+{
+    /**
+     * Get the validation rules that apply to the request.
+     */
+    public function rules(): array
+    {
+        return [
+            'per_page' => 'nullable|integer|min:1|max:100',
+
+        ];
+    }
+
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+}
