# Modules/Notification/app/Http/Requests/StoreNotificationRequest.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace Modules\Notification\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreNotificationRequest extends FormRequest
+{
+    /**
+     * Get the validation rules that apply to the request.
+     */
+    public function rules(): array
+    {
+        return [
+            'title' => ['required', 'string'],
+            'body' => ['required', 'string'],
+        ];
+    }
+
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+}
