# Modules/Notification/app/Transformers/NotificationResource.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace Modules\Notification\Transformers;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class NotificationResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'title' => $this->title,
+            'body' => $this->body,
+            'created_at' => $this->created_at
+        ];
+    }
+}
