# Modules/Post/routes/api.php
@@ -11,7 +11,7 @@ Route::middleware(['auth:sanctum'])->prefix('v1')->group(function () {
 
 
 Route::prefix('posts')->controller(PostController::class)->group(function () {
-    Route::post('', 'store')->middleware(['auth:sanctum','role:editor']);
+    Route::post('', 'store')->middleware(['auth:sanctum','role:admin,editor']);
     Route::delete('/{post}', 'destroy')->middleware(['auth:sanctum','role:admin,editor']);
     Route::get('', 'index');
 });
